--- a/lab3.html
+++ b/lab3.html
@@ -27,9 +27,9 @@
             <option>University of calicut</option>
 
     </select> </br></br>
-    Programs
-    <input type=text list="Programs">
-    <datalist id="Programs">
+    Programmes
+    <input type=text list="Programmes">
+    <datalist id="Programmes">
               <option value="Computer Science">
               <option value="Maths">
               <option value="Statistics">
