--- a/lab3.html
+++ b/lab3.html
@@ -3,7 +3,7 @@
  <head>
    <title>Registration Form</title>
  </head>
-<body style=" background-color: #e3dded; text-align: center; margin: auto; width: 60%;color:#2a1e3d; border:solid;border-radius:19px; padding-bottom:19px;" >
+<body style=" background-color: #e3dded; text-align: center; margin: 39px auto; width: 60%;color:#2a1e3d; border:solid;border-radius:19px; padding-bottom:19px;" >
     <h1><u>Registration Form</u></h1>
      <form action="done.html">
       Name:  <input type="text" placeholder="Your Name" required> </br></br>
